Fix CSS issues on mobile layouts.

--- a/veresone_theme/css/style.css
+++ b/veresone_theme/css/style.css
@@ -873,7 +873,7 @@ section.grey-new.min-height h1 {
 }
 
 .new-tabs {
-    margin: 40px 0px;
+    margin: 0px 0px;
 }
 .new-tabs a {
     display: block;
@@ -903,7 +903,7 @@ section.grey-new.min-height h1 {
     text-decoration: none;
 }
 .tabs-area {
-    margin-top: 50px;
+    margin-top: 25px;
     position: relative;
     display: block;
 }
